# 8BitAnalysers

./: .gitignore
Data/ArcadeZ80/: GlobalConfig.json  imgui.ini
Data/ArcadeZ80/Workspace/TimePilot/: Analysis.json  Config.json
Data/PCEAnalyser/EmuTestPassed/: Parasol Stars - The Story of Bubble Bobble III (USA).pce
Data/PCEAnalyser/Mappings/: Alien Crush (Japan).json  Alien Crush (USA).json  Ankoku Densetsu (Japan).json  Blodia (Japan).json  Boxyboy (USA).json  Columns (Japan).json  Dragon Spirit (USA).json  Gradius (Japan).json
Source/: patch_emu.sh
Source/ArcadeZ80/: ArcadeZ80.cpp  ArcadeZ80.h  ArcadeZ80MCP.cpp  ArcadeZ80Machine.cpp  ArcadeZ80Machine.h
Source/ArcadeZ80/TimePilot/: TimePilotDebug.cpp  TimePilotMachine.cpp  TimePilotMachine.h
Source/MZ800/: App.h  CMakeLists.txt  MZ800ChipsImpl.c  MZ800ChipsImpl.h  MZ800Config.cpp  MZ800Config.h  MZ800Emu.cpp  MZ800Emu.cpp.orig  MZ800Emu.cpp.rej  MZ800Emu.h  Main.cpp  chips_impl.c  i8253.c  i8253.h  mz800_cmake.tmp  mz800_cmt.c  mz800_gdg.c  mz800_pioz80.c  mz800_psg.c  sn76489an.h  temp_patch.py  update_h.py
Source/MZ800/Tests/: MZ800Tests.cpp
Source/PCE/: AsmExportValidator.cpp  AsmExportValidator.h  BankSet.cpp  BankSet.h  DebugStats.cpp  DebugStats.h  GameDb.cpp  GameDb.h  PCEAsmExporter.cpp  PCEConfig.cpp  PCEConfig.h  PCEEmu.cpp  PCEEmu.h  PCEGameConfig.cpp  PCEGameConfig.h
Source/PCE/Viewers/: BanksViewer.cpp  BanksViewer.h  BatchGameLoadViewer.cpp  BatchGameLoadViewer.h  DebugStatsViewer.cpp  DebugStatsViewer.h  GameDbViewer.cpp  GameDbViewer.h  PCEViewer.cpp  SpriteViewer.cpp
Source/PCE/asm/: OpcodeZoo.asm  OpcodeZoo.pce  OpcodeZoo_2.asm  OpcodeZoo_2.pce  OpcodeZoo_2_stripped.asm  Strip.bat  Strip.py
Source/Shared/CodeAnalyser/: AssemblerExport.cpp  AssemblerExport.h  CodeAnalyser.cpp  CodeAnalyser.h  CodeAnalysisJson.cpp  Disassembler.cpp  Disassembler.h  FunctionAnalyser.h
Source/Shared/CodeAnalyser/6502/: CodeAnalyser6502.cpp  CodeAnalyserHuC6280.cpp  CodeAnalyserHuC6280.h  HuC6280Disassembler.cpp  HuC6280Disassembler.h  M6502Disassembler.cpp  M65C02Disassembler.cpp
Source/Shared/CodeAnalyser/IODevices/: CMTDevice.cpp  CMTDevice.h  GDGDevice.cpp  GDGDevice.h  I8253Device.cpp  I8253Device.h  I8255Device.cpp  I8255Device.h  SN76489ANDevice.cpp  SN76489ANDevice.h  WD2793Device.cpp  WD2793Device.h  Z80PIODevice.cpp  Z80PIODevice.h
Source/Shared/CodeAnalyser/UI/: CodeAnalyserUI.cpp  ComboBoxes.cpp  FunctionViewer.cpp  GlobalsViewer.cpp
Source/Shared/CodeAnalyser/Z80/: Z80Disassembler.cpp
Source/Shared/Exporters/: SkoolkitExporter.cpp
Source/Shared/MCPServer/: MCPManager.cpp  MCPManager.h  MCPServer.cpp  MCPServer.h  MCPTools.cpp
Source/Shared/Misc/: EmuBase.cpp  EmuBase.h  GameConfig.cpp  GameConfig.h  GlobalConfig.cpp  GlobalConfig.h
Source/Shared/Util/: FileUtil.h  GraphicsView.h
Source/Shared/Util/Linux/: FileUtil_Linux.cpp
Source/Shared/Util/Mac/: FileUtil_Mac.mm
build_mz800/: CMakeCache.txt  Makefile  cmake_install.cmake
build_mz800/glfw/: Makefile  cmake_install.cmake
build_mz800/glfw/src/: Makefile  cmake_install.cmake
